2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* execute.c (open_next_file): Save/restore file creation context.

2010-11-03  Eric Blake  <eblake@redhat.com>

	* basicdefs.h (ISDIGIT): Avoid compiler warning on cygwin.
	* sed/compile.c (normalize_text): Avoid undefined behavior.

	* sed/sed.c (includes): Supply missing header.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* gnulib: Update.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed.x: Document address behavior across input files.
	* doc/sed.1: Regenerate.

2012-02-13  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Test whether fopen("foo", "rt") works.
	* sed/compile.c: Do not open scripts with "rt" mode if it doesn't.
	* sed/sed.c: Never open input files with "rt" mode.

2012-02-05  Paolo Bonzini  <bonzini@gnu.org>
            Jim Hill  <gjthill@gmail.com>

	* autoboot.conf: Change getline to getdelim.
	* doc/sed-in.texi: Document -z/--null-data.
	* doc/sed.texi: Regenerate.
	* doc/sed.1: Regenerate.
	* sed/execute.c: Change '\n' to buffer_delimiter.
	* sed/sed.c: Add support for -z/--null-data.
	* sed/sed.h: Add buffer_delimiter.
	* sed/utils.c: Change ck_getline to ck_getdelim.
	* sed/utils.h: Change ck_getline to ck_getdelim.
	* NEWS: Document new option.

2010-07-18  Paolo Bonzini  <bonzini@gnu.org>

	* sed.c (write_mode): New.
	(main): Initialize it to "wb" if --binary is passed.
	* sed.h (write_mode): New.
	* compile.c (mark_subst_opts, compile_program): Use it instead
	of "w".
	* execute.c (open_next_file): Pass write_mode to ck_mkstemp.
	* utils.c (ck_mkstemp): Accept mode, pass it to fdopen.  Constify.
	* utils.h (ck_mkstemp): Adjust prototype.

2019-07-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Let --posix turn off nonportable scripts ending in backslash.
	* sed/compile.c (errors, INCOMPLETE_CMD): New error string.
	(compile_program): In strict posix mode, complain about incomplete
	command.
	* NEWS: Update.
	Report by Bruno Haible.

2011-11-23  Paolo Bonzini  <bonzini@gnu.org>
